Fix interaction bug by correcting z-indexes and styling dropdown

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,19 +10,30 @@ div {
   background-image: url('../images/bart.jpg');
   background-size: cover;
   background-position: center center;
-  position: relative;
+  position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   bottom: 0;
-  height: 100vh;
-  z-index: -10;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 #bgImg-Overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
-  z-index: -5;
   background-color: rgba(0, 0, 0, 0.829);
+  padding-top: 20px;
+}
+
+#stationSelect {
+  color: #333 !important;
+  background-color: #fff !important;
+  cursor: pointer;
+}
+
+select option {
+  color: #333;
+  background-color: #fff;
 }
